<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />
    <EditText android:id="@+id/username_edit"
        android:inputType="textNoSuggestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placename"
        />
    <EditText android:id="@+id/placename_edit"
        android:inputType="textNoSuggestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Spinner android:id="@+id/foodtype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/foodtype_arrays"
        android:prompt="@string/foodtype_prompt"
        />

    <CheckBox android:id="@+id/bread_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bread_checkbox"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/pho_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pho_checkbox"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/soup_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soup_checkbox"
        android:onClick="onCheckboxClicked"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        />
    <EditText android:id="@+id/location_edit"
        android:inputType="textNoSuggestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/store_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" />

</LinearLayout>