<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />

    <EditText android:id="@+id/username"
        android:inputType="textNoSuggestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placename"
        />

    <EditText android:id="@+id/placename"
        android:inputType="textNoSuggestions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Spinner android:id="@+id/foodtype_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/foodtype_arrays"
        android:prompt="@string/foodtype_prompt"
        />



    <Button
        android:id="@+id/detail_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" />

</LinearLayout>